# mybankie-ai-chatbot

./: .gitignore  AI-Model.md  Makefile  README.md  TODO.md
actions/: actions.py
chatbot-rs/: Cargo.toml
chatbot-rs/src/: lib.rs  main.rs  openai_client.rs  schema.rs
chatbot-rs/src/openai/: completion.rs  embeddings.rs  mod.rs  openai_client.rs
data/nlu/: nlu.yml
data/rules/: rules.yml  rules_handoff.yml
data/stories/: stories.yml  stories_switch_from_pay_credit_card.yml  stories_switch_from_search_transaction.yml  stories_switch_from_transfer_money.yml
openai_api/: connection.py
