[package]
name = "chatbot-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miette = "7.2.0"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.201", features = ["derive"] }
indoc = "2.0.5"
itertools = "0.12.1"
serde_json = "1.0.117"
rusqlite = { version = "0.31.0", features = ["bundled", "load_extension"] }
clap = { version = "4.2.1", features = ["derive"] }
aws-sdk-s3 = "0.26.0"
aws-config = "0.55.1"
futures = "0.3.30"
tokio = { version = "1.37.0", features = ["full"] }
walkdir = "2.5.0"
chrono = "0.4.38"